2010-05-23 Devil Wang <wxjeacen@gmail.com>
    * Add software for Fedora 13
	
2010-05-23 Homer Xing <homer.xing@gmail.com>

    * Immediately show/hide "quick setup" button.
    * Immediately show/hide icons at the side of software names.

2010-05-23 Ray Chen <chenrano2002@gmail.com>

    * Use "yum clean all" command when clean YUM cache

2010-05-22 HAN Haofu <gtxx3600@gmail.com>

	* Optimize the behaviour of lib.notify()

2010-05-22 Homer Xing <homer.xing@gmail.com>

    * Add button, in order to support "copy to clipboard"

2010-05-21 Homer Xing <homer.xing@gmail.com>

    * Clean up Nautilus thumbnails image cache.
    * Remove unused software configuration.
    * Dynamic pane loading.

2010-05-20 Homer Xing <homer.xing@gmail.com>

    * Detect missing packages in ArchLinux

2010-05-19 Homer Xing <homer.xing@gmail.com>

    * Add SweetHome3D
    * Add Fix_error_in_netbeans_shortcut_Ubuntu in "Computer Doctor" pane.
    * Add Add_user_to_vboxusers_group in "Computer Doctor" pane.
    * Add Fix_error_in_fontconfig_properties_Ubuntu in "Computer Doctor" pane.
    * Add Fix_error_in_49_sansserif_conf in "Computer Doctor" pane.

2010-05-18 Homer Xing <homer.xing@gmail.com>

    * Add "Computer Doctor" pane.

2010-05-16 Homer Xing <homer.xing@gmail.com>

    * Improve "Clean up unused kernels". Display Linux kernel size.
    * Add "Remove auto-removable packages" feature.
    * Add text to explain cache dropping operation.
    * Show traceback in window, rather than in terminal.
    * Show/hide an icon by the side of software name.
    * Hide a software item if its package name has been changed.

2010-05-16 Devil Wang <wxjeacen.gmail.com>

    * Add Emacs

2010-05-14 Devil Wang <wxjeacen.gmail.com>
    
    * Add Ailurus un-install script. It helps developers to un-install Ailurus.
    
2010-05-14 Homer Xing <homer.xing@gmail.com>

    * Fix bug: DisableGetty output error on Fedora 13

2010-05-14 HAN Haofu <gtxx3600@gmail.com>
