@@ -1,5 +1,6 @@
 2010-05-23 Devil Wang <wxjeacen@gmail.com>
-    * Add software for Fedora 13
+
+    * Add a lot of software for Fedora
 	
 2010-05-23 Homer Xing <homer.xing@gmail.com>
 
